--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -16,13 +16,13 @@
           <form [formGroup]="loginFormGroup" (ngSubmit)="onSubmit()">
             <div class="form-group">
               <input type="email" class="form-control" placeholder="Email*" [formControlName]="'email'" required>
-              <div  *ngIf="loginFormGroup.get('email')!.invalid && loginFormGroup.get('email')!.touched">
+              <div class="error"  *ngIf="loginFormGroup.get('email')!.invalid && loginFormGroup.get('email')!.touched">
                 {{getEmailError('email') || getRequiredError('email')}}
               </div>
             </div>
             <div class="form-group">
               <input type="password" class="form-control" placeholder="Password*" [formControlName]="'password'" required>
-              <div  *ngIf="loginFormGroup.get('password')!.invalid && loginFormGroup.get('password')!.touched">
+              <div class="error"  *ngIf="loginFormGroup.get('password')!.invalid && loginFormGroup.get('password')!.touched">
                 {{getRequiredError('password')}}
               </div>
             </div>
