--- a/src/app/modules/auth/components/registration/registration.component.css
+++ b/src/app/modules/auth/components/registration/registration.component.css
@@ -13,7 +13,7 @@ a{
   text-decoration:none !important;
 }
 .container {
-  margin-top: 60px;
+  margin-top: 1rem;
 }
 .myform{
   position: relative;
