--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Fields</a>
+            <a class="nav-link" routerLink="/fields">Fields</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Responses</a>
