--- a/src/app/modules/fields/components/add-field/add-field.component.html
+++ b/src/app/modules/fields/components/add-field/add-field.component.html
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <button class="btn btn-outline-dark" (click)="modal.close('Cancel')">Cancel</button>
+      <button class="btn btn-outline-dark">Cancel</button>
       <button type="submit" class="btn btn-outline-dark" [disabled]="!editFieldFormGroup.valid">Save</button>
     </div>
   </form>
