--- a/src/app/modules/questionnaire/questionnaire.component.html
+++ b/src/app/modules/questionnaire/questionnaire.component.html
@@ -23,9 +23,9 @@
                   </div>
                 </form>
                 <form *ngIf="field.active === true && field.fieldType === 'RADIO_BUTTON'" [formGroupName]="i">
-                  <div class="btn-group btn-group-toggle" ngbRadioGroup name="radioBasic">
+                  <div class="btn-group btn-group-toggle" ngbRadioGroup name="radioBasic" [formControlName]="'model'">
                     <label ngbButtonLabel class="btn-primary" *ngFor="let option of field.options">
-                      <input ngbButton type="radio" [formControlName]="option.optionValue">{{option.optionValue}}
+                      <input ngbButton type="radio" [value]="option.optionValue">{{option.optionValue}}
                     </label>
                   </div>
                 </form>
