--- a/src/app/modules/fields/fields.component.html
+++ b/src/app/modules/fields/fields.component.html
@@ -28,7 +28,7 @@
           <td> {{ field.active }} </td>
           <td>
             <div class="d-flex flex-row">
-              <button class="btn btn-outline-success" title="Edit" (click)="addField()">Edit</button>
+              <button class="btn btn-outline-success" title="Edit" (click)="editField(field)">Edit</button>
               <button class="btn btn-outline-danger" title="Delete" (click)="deleteField(field.id)">Delete</button>
             </div>
           </td>
