--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light pr-5 pl-5 pb-0">
+<nav class="navbar navbar-expand-lg navbar-light bg-light pr-5 pl-5 pb-0" *ngIf="customer !== null">
   <a class="navbar-brand" href="#">
     <img class="w-50" src="../../../../../assets/logo.png" disabled alt="">
   </a>
